Se creo el formulario detalle_ventas

--- a/FACTURACION_PANADERIA/src/Capa1_Presentacion/frmMenu.form
+++ b/FACTURACION_PANADERIA/src/Capa1_Presentacion/frmMenu.form
@@ -53,6 +53,14 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mnuVentasActionPerformed"/>
               </Events>
             </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="mnuDetalle_Ventas">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Detalle Ventas"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mnuDetalle_VentasActionPerformed"/>
+              </Events>
+            </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="mnuSalir">
               <Properties>
                 <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
